==> MikroElektronika/mikrosdk_v2/targets/pic_8bit/mikroe/pic18/src/adc/implementation_2/subimplementation_1/hal_ll_adc.c <==
#include "hal_ll_adc.h"
#include "hal_ll_gpio.h"
#include "hal_ll_analog_in_map.h"
#define hal_ll_adc_get_module_state_address ((hal_ll_adc_handle_register_t *)*handle)
#define hal_ll_adc_get_handle (hal_ll_adc_handle_register_t *)hal_ll_adc_get_module_state_address->hal_ll_adc_handle
#define hal_ll_adc_get_base_from_hal_handle ((hal_ll_adc_hw_specifics_map_t *)((hal_ll_adc_handle_register_t *)\
                                            (((hal_ll_adc_handle_register_t *)(handle))->hal_ll_adc_handle))->hal_ll_adc_handle)->ch_enable
#define hal_ll_adc_module_num(_module_num) (_module_num - 1)
#define HAL_LL_ADC_CCR_OFFSET                  0x304
#define HAL_LL_ADC_AUTO_CONVERT_MODE           0x70
#define HAL_LL_ADC_RESULT_FORMAT_BIT           0x07
#define HAL_LL_ADC_CONVERSION_CLOCK            0x0F
#define HAL_LL_ADC_CLEAR_CHANNEL_BITS          0x7C
#define HAL_LL_ADC_START_CONVERSION_BIT        0x01
#define HAL_LL_ADC_TURN_ON_BIT                 0x00
#define HAL_LL_ADC_MODULE_ENABLE_BIT           0x00
#define HAL_LL_ADC_RESULT_SIGN_BIT             0x8000U
#define HAL_LL_ADC_DEFAULT_BASE_ADDRESS        0xFF
#define HAL_LL_ADC_VREF_MASK                   0x38 // voltage reference mask
#define HAL_LL_ADC_VREF_INTERN_MASK            0x30

hal_ll_err_t hal_ll_adc_register_handle(hal_ll_pin_name_t pin, hal_ll_adc_voltage_reference_t vref_input, hal_ll_adc_resolution_t resolution, hal_ll_adc_handle_register_t *handle_map, uint8_t *hal_module_id)
{
    uint8_t pin_check_result;
    uint8_t index;

    if ( (pin_check_result = hal_ll_adc_check_pins( pin, &index, handle_map )) == HAL_LL_PIN_NC ) {
        return HAL_LL_ADC_WRONG_PIN;
    };

    switch ( resolution )
    {
    case HAL_LL_ADC_RESOLUTION_12_BIT:
        hal_ll_adc_hw_specifics_map[pin_check_result].resolution = HAL_LL_ADC_RESOLUTION_12_BIT;
        break;
    default:
        return HAL_LL_ADC_UNSUPPORTED_RESOLUTION;
    }

    switch ( vref_input )
    {
        case HAL_LL_ADC_VREF_EXTERNAL:
            hal_ll_adc_hw_specifics_map_local->vref_input = HAL_LL_ADC_VREF_EXTERNAL;
            break;
        case HAL_LL_ADC_VREF_INTERNAL:
            hal_ll_adc_hw_specifics_map_local->vref_input = HAL_LL_ADC_VREF_INTERNAL;
            break;
        case HAL_LL_ADC_VREF_DEFAULT:
            hal_ll_adc_hw_specifics_map_local->vref_input = HAL_LL_ADC_VREF_DEFAULT;
            break;
        default:
            return HAL_LL_ADC_UNSUPPORTED_VREF;
    }

    if ( hal_ll_adc_hw_specifics_map[pin_check_result].pin != pin )
    {
        hal_ll_adc_map_pin( pin_check_result, &index );

        handle_map[pin_check_result]->init_ll_state = false;
    }

    *hal_module_id = pin_check_result;

    hal_ll_module_state[pin_check_result].hal_ll_adc_handle = (handle_t *)&hal_ll_adc_hw_specifics_map[pin_check_result].ch_enable;

    handle_map[pin_check_result]->hal_ll_adc_handle = (handle_t *)&hal_ll_module_state[pin_check_result].hal_ll_adc_handle;

    return HAL_LL_ADC_SUCCESS;
}

hal_ll_err_t hal_ll_adc_read( handle_t *handle, uint16_t *readDatabuf )
{
    hal_ll_adc_hw_specifics_map_local = hal_ll_get_specifics(hal_ll_adc_get_module_state_address);
    low_level_handle = hal_ll_adc_get_handle;

    clear_reg_bits( HAL_LL_ADCON0_ADDRESS, HAL_LL_ADC_CLEAR_CHANNEL_BITS );

    set_reg_bits( HAL_LL_ADCON0_ADDRESS, ( hal_ll_adc_hw_specifics_map_local->channel << 2 ) );

    Delay_22us();

    set_reg_bit( HAL_LL_ADCON0_ADDRESS, HAL_LL_ADC_START_CONVERSION_BIT );

    while ( ( check_reg_bit( HAL_LL_ADCON0_ADDRESS, HAL_LL_ADC_START_CONVERSION_BIT ) ) );

    *readDatabuf = *(uint16_t*)HAL_LL_ADRESL_ADDRESS;

    if ( *readDatabuf & HAL_LL_ADC_RESULT_SIGN_BIT )
        *readDatabuf = 0;

    return HAL_LL_ADC_SUCCESS;
}

static hal_ll_pin_name_t hal_ll_adc_check_pins( hal_ll_pin_name_t pin, uint8_t *index, hal_ll_adc_handle_register_t *handle_map )
{
    uint8_t pin_index = 0;
    static const uint16_t adc_map_size = ( sizeof( hal_ll_analog_in_register_list ) / sizeof( hal_ll_pin_channel_list_t ) );

    if ( HAL_LL_PIN_NC == pin ) {
        return HAL_LL_PIN_NC;
    }

    for ( pin_index = 0; pin_index < adc_map_size; pin_index++ ) {
        if ( hal_ll_analog_in_register_list[pin_index].pin == pin ) {
            *index = pin_index;
            return hal_ll_analog_in_register_list[ pin_index ].module_index;
        }
    }

    return HAL_LL_PIN_NC;
}

static void hal_ll_adc_map_pin( uint8_t module_index, uint8_t *index ) {
    // Map new pins
    hal_ll_adc_hw_specifics_map[module_index].pin = hal_ll_analog_in_register_list[*index ].pin;
    hal_ll_adc_hw_specifics_map[module_index].ch_enable = hal_ll_analog_in_register_list[ *index ].analog_in_register_addr;
    hal_ll_adc_hw_specifics_map[module_index].channel = hal_ll_analog_in_register_list[ *index ].channel;
}

static void _hal_ll_adc_hw_init( uint32_t vref )
{
    clear_reg( HAL_LL_ADCON0_ADDRESS );

    if( vref == HAL_LL_ADC_VREF_EXTERNAL)
        clear_reg_bits( HAL_LL_ADCON1_ADDRESS, ( HAL_LL_ADC_VREF_MASK ) );
    else
        {
        set_reg_bits( HAL_LL_ADCON1_ADDRESS, HAL_LL_ADC_VREF_INTERN_MASK );
        #ifdef HAL_LL_VREFCON0_ADDRESS
        set_reg_bits( HAL_LL_VREFCON0_ADDRESS, HAL_LL_VREFCON0_4096_MASK );
        while ( ( check_reg_bit( HAL_LL_VREFCON0_ADDRESS, HAL_LL_VREFCON0_READY_BIT ) ) );
        #endif
        }
    set_reg_bits( HAL_LL_ADCON2_ADDRESS, HAL_LL_ADC_CONVERSION_CLOCK );

    set_reg_bit( HAL_LL_ADCON2_ADDRESS, HAL_LL_ADC_RESULT_FORMAT_BIT );

    set_reg_bit( HAL_LL_ADCON0_ADDRESS, HAL_LL_ADC_TURN_ON_BIT );
}

static void hal_ll_adc_init( hal_ll_adc_hw_specifics_map_t *map ) {

    hal_ll_gpio_port_analog_input( (hal_ll_gpio_base_t)hal_ll_gpio_port_base_map((map->pin & HAL_LL_NIBBLE_HIGH_8BIT) >> 4), map->pin );

    _hal_ll_adc_enable_module();

    _hal_ll_adc_hw_init(map->vref_input);

}
